Fixed issue with flags overlapping

--- a/Resources/compass/sass/style.scss
+++ b/Resources/compass/sass/style.scss
@@ -82,6 +82,7 @@ form {
 .list_row {
 	line-height: 1.6;
 	margin-bottom: 0.7em;
+	min-height: 7em;
 
 	.list_row_flags {
 		position: absolute;
